--- a/ui/project/theme.css
+++ b/ui/project/theme.css
@@ -46,3 +46,12 @@ body {
 }
 
 
+
+.row{
+    overflow: hidden; 
+}
+
+[class*="col-"]{
+    margin-bottom: -99999px;
+    padding-bottom: 99999px;
+}
